# rasberry

arm_demo/src/: arm_cartesian_demo.cpp  arm_fk_demo.cpp  arm_ik_demo.cpp
table_arm/: CMakeLists.txt
table_arm/config/: ik.yaml
table_arm/include/: wheeltec_table_arm.h
table_arm/launch/: base_serial.launch  virtual_space_bostacle_avoidance.launch  voice_control_arm.launch
table_arm/scripts/: find_color.py
table_arm/src/: ar_label_sort.cpp  ar_label_stack.cpp  voice_control.cpp  wheeltec_table_arm.cpp
table_streeing_arm_moveit_config/config/: table_streeing_arm.srdf
table_streeing_arm_moveit_config/launch/: demo.launch
wheeltec_tracker_pkg/scripts/: color_decetor.py  visualTracker.py
wheeltec_tracker_pkg/src/: face_tracker_node.cpp  gesture_recognition(复件).cpp
yolo_fast/: CMakeLists.txt  build.sh  package.xml
yolo_fast/include/ncnn/: platform.h
yolo_fast/launch/: yolo_fast.launch
yolo_fast/msg/: position.msg
yolo_fast/src/: demo.cpp  yolo-fastestv2.cpp
